# wordcutw

./: Cargo.toml  README.md  cbindgen.sh
c_example/: Makefile  ex1.c  run_ex1.sh
headers/: wordcutw.h
src/: lib.rs
